# StableDiffusion-ULDM

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  train_ddpm_vqvae.py  train_vqvae.py
requirements/: base.txt  dev.txt  tests.txt
scripts/: visualize_lpips.py  vqvae_architecture_diagram.py  vqvae_visualize.py
tests/: test_celeb_dataset.py  test_discriminator.py  test_lpips.py  test_vqvae.py
ulsd_model/: config.yml
ulsd_model/config/: core.py
ulsd_model/datasets/: CelebDataset.py  MnistDatasets.py
ulsd_model/models/: discriminator.py  lpips.py  unet.py  vae.py  vqvae.py
ulsd_model/utils/: celeb_datautils.py
