[metadata]
name = stable-diffusion-uldm
version = 0.1.0
description = Latent diffusion utilities and VQ-VAE training pipeline for MNIST experiments.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dusan
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    numpy
    pillow
    PyYAML
    tqdm
    torch
    torchvision

[options.packages.find]
exclude =
    tests
    tests.*

[options.extras_require]
dev =
    black
    isort
    pre-commit

tests =
    pytest

[options.entry_points]
console_scripts =
    train-vqvae = train_vqvae:main
    train-ddpm-vqvae = train_ddpm_vqvae:main

[options.package_data]
ulsd_model =
    config.yml
